kubernetes/services/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ryanote
  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  tls:
#    - hosts:
#        - ryan.note.com
#      secretName: tls-secret
  rules:
  - host: ryanote.kr
    http:
      paths:
      - path: /notes
        backend:
          serviceName: ryanote-web
          servicePort: 5060

#      - path: /auth
#        backend:
#          serviceName: ryanote-auth
#          servicePort: 5090
